...
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y40-gs-prm">
                                                <rect key="frame" x="0.0" y="508" width="187" height="32"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" title="Followers"/>
                                                <connections>
                                                    <action selector="changeTabWithSender:" destination="9pv-A4-QxB" eventType="touchDown" id="5nC-9O-cva"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me3-F0-r97">
                                                <rect key="frame" x="187" y="508" width="188" height="32"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" title="Following"/>
                                                <connections>
                                                    <action selector="changeTabWithSender:" destination="9pv-A4-QxB" eventType="touchDown" id="KHn-UT-ved"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJw-64-dOS">
                                                <rect key="frame" x="67" y="470" width="240" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" title="Repos"/>
                                                <connections>
                                                    <action selector="changeTabWithSender:" destination="9pv-A4-QxB" eventType="touchDown" id="ehJ-No-c3c"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Profile Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s40-nn-wFX">
                                                <rect key="frame" x="67" y="548" width="240" height="21"/>
...
