...

class ReposViewController: UITableViewController, NSFetchedResultsControllerDelegate {

    // allows star/unstar button and handles API calls for those actions
    override func tableView(_ tableView: UITableView, editActionsForRowAt indexPath: IndexPath) -> [UITableViewRowAction]? {
        let reponame = fetchedResultsController.object(at: indexPath).name!
        let star = UITableViewRowAction(style: .normal, title: "Star/Unstar") { action, index in
            // if following, unfollows and vice versa
            GithubService.doesUserHaveStarred(byUsername: USER, repoName: reponame)
            .onSuccess { _ in
                GithubService.unstarRepo(byUsername: USER, repoName: reponame)
                .onFailure { reason in
                    print(reason)
...
